deploy: c5db692adce44fabf6eaafac73cdde4e43a4dd4e

--- a/content/examples/index.html
+++ b/content/examples/index.html
@@ -62,7 +62,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="TODO: Add content" href="nouns-and-data.html" />
-    <link rel="prev" title="TODO: Add content" href="../understanding/assembly-language-approach.html" />
+    <link rel="prev" title="The Assembly Language Approach" href="../understanding/assembly-language-approach.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -457,7 +457,7 @@ document.write(`
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">TODO: Add content</p>
+        <p class="prev-next-title">The Assembly Language Approach</p>
       </div>
     </a>
     <a class="right-next"
