--- a/content/understanding/lambda-approach.html
+++ b/content/understanding/lambda-approach.html
@@ -61,7 +61,7 @@
     <script>DOCUMENTATION_OPTIONS.pagename = 'content/understanding/lambda-approach';</script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="TODO: Add content" href="assembly-language-approach.html" />
+    <link rel="next" title="The Assembly Language Approach" href="assembly-language-approach.html" />
     <link rel="prev" title="TODO: Add content" href="turing-machine-approach.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -461,7 +461,7 @@ document.write(`
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">TODO: Add content</p>
+        <p class="prev-next-title">The Assembly Language Approach</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
