--- a/content/understanding/assembly-language-approach.html
+++ b/content/understanding/assembly-language-approach.html
@@ -62,7 +62,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Code Examples" href="../examples/index.html" />
-    <link rel="prev" title="TODO: Add content" href="lambda-approach.html" />
+    <link rel="prev" title="The Lambda Calculus Approach" href="lambda-approach.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -492,7 +492,7 @@ document.write(`
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">TODO: Add content</p>
+        <p class="prev-next-title">The Lambda Calculus Approach</p>
       </div>
     </a>
     <a class="right-next"
