deploy: 0a4d311a4167fafa5346192971f9fbcc146dd0c4

--- a/content/understanding/turing-machine-approach.html
+++ b/content/understanding/turing-machine-approach.html
@@ -456,6 +456,14 @@ document.write(`
 └───────┴───────┴───────┴────┴────┴────┴────┴───────┴───────┘
 </pre></div>
 </div>
+<p>blah blah blah</p>
+<p>What you want to work on here is how to consume tokens by the head</p>
+<p>Turing machine equivalence is established by the fact that we can build a universal Turing machine in Nock.  Per \citet*{Hopcroft1979}, p.~148, a universal Turing machine has the following components:</p>
+<p>\begin{itemize}
+\item  A finite, non-empty set of tape alphabet symbols, including a blank symbol.
+\item  A finite, non-empty set of states, including a start state and one or more halting states.
+\item  A transition function that, given the current state and the symbol being read, specifies the next state, the symbol to write, and the direction to move (left or right).
+\end{itemize}</p>
 </section>
 </section>
 
