deploy: 61429569d1619447d221c3183b4bb22ab084f494

--- a/content/specification/index.html
+++ b/content/specification/index.html
@@ -62,7 +62,7 @@
     <link rel="icon" href="../../_static/favicon.ico"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="TODO: Add content" href="detailed-examples.html" />
+    <link rel="next" title="Detailed Examples" href="detailed-examples.html" />
     <link rel="prev" title="Nock" href="../../intro.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -621,7 +621,7 @@ nock(a)             *a
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">TODO: Add content</p>
+        <p class="prev-next-title">Detailed Examples</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
