--- a/content/understanding/assembly-language-approach.html
+++ b/content/understanding/assembly-language-approach.html
@@ -456,6 +456,7 @@ document.write(`
 </div>
 <p>The high-level logic bears some commonalities, but the mechanics of the loop and the return are elided in favor of a description.</p>
 <p>While the assembly program happens to make no reference to values that may already exist in its scope, it certainly could—there’s not a subject-style restriction of scope.  The continuation condition of the program (<code class="docutils literal notranslate"><span class="pre">j</span></code>) and the termination condition (<code class="docutils literal notranslate"><span class="pre">beq</span></code>) are both <code class="docutils literal notranslate"><span class="pre">GOTO</span></code> statements which jump in the scope—and could have jumped anywhere.</p>
+<p>For assembly, there’s nothing “special” about a function:  a function is just a data pattern with a certain header that supports a <code class="docutils literal notranslate"><span class="pre">GOTO</span></code> jump and knows where to find its arguments.  Thus also with Nock, in its way.</p>
 <p>Nock, like assembly language, requires the coder or compiler to take pains to express complex ideas using simple pieces.  Probably the biggest difference between the two, however, is that Nock simply has no idea how its instruction will be instantiated on the metal; it is a specification of equivalent behavior.  This makes Nock feel more declarative (but only a little bit more) than assembly language.</p>
 </section>
 
