--- a/genindex.html
+++ b/genindex.html
@@ -60,15 +60,7 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/mermaid@11.2.0/dist/mermaid.esm.min.mjs"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@mermaid-js/layout-elk@0.1.4/dist/mermaid-layout-elk.esm.min.mjs"></script>
     <script type="module">mermaid.initialize({
-  theme: 'base',
-  themeVariables: {
-    primaryColor: '#F5FFF5',
-    primaryTextColor: '#141A14',
-    primaryBorderColor: '#AAE68C',
-    lineColor: '#AAE68C',
-    secondaryColor: '#383C38',
-    tertiaryColor: '#141A14'
-  }
+  theme: 'forest'
 });
 </script>
     <script src="https://cdn.jsdelivr.net/npm/d3@7.9.0/dist/d3.min.js"></script>
