deploy: d6040543efc62728b23927b633dba452da2ee649

--- a/content/specification/opcode-4.html
+++ b/content/specification/opcode-4.html
@@ -535,6 +535,7 @@ Exception: fail: cell
 </div>
 </div>
 </div>
+<p>Atoms are formally unbounded in size, so incrementing the largest possible atom is not a problem in Nock itself.  However, practical interpreters may have limits on the size of atoms they can represent.</p>
 <p>In this interpreter, which is written in Python, there are only practical limits (the size of RAM) to integers and thus to atom size.</p>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
