--- a/content/hints-jetting/index.html
+++ b/content/hints-jetting/index.html
@@ -531,7 +531,7 @@ By Urbit Systems Technical Journal
 
   <p class="copyright">
     
-      © Copyright 2025.
+      © Copyright 2025–2026.
       <br/>
     
   </p>
