--- a/content/history/nock-5k.html
+++ b/content/history/nock-5k.html
@@ -524,7 +524,7 @@ By Urbit Systems Technical Journal
 
   <p class="copyright">
     
-      © Copyright 2025.
+      © Copyright 2025–2026.
       <br/>
     
   </p>
