--- a/content/understanding/turing-machine-approach.html
+++ b/content/understanding/turing-machine-approach.html
@@ -569,7 +569,7 @@ By Urbit Systems Technical Journal
 
   <p class="copyright">
     
-      © Copyright 2025.
+      © Copyright 2025–2026.
       <br/>
     
   </p>
